--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:h2:file:~/h2userDB;AUTO_SERVER=TRUE
+spring.datasource.url=jdbc:h2:file:~/IdeaProjects/TimesheetProject/src/main/resources/h2userDB;AUTO_SERVER=TRUE
 spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
