Changes into a data base - MySQL model, added new functionalities

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
-spring.datasource.url=jdbc:h2:file:~/IdeaProjects/TimesheetProject/src/main/resources/h2userDB;AUTO_SERVER=TRUE
-spring.datasource.username=sa
-spring.datasource.password=
+#spring.datasource.url=jdbc:h2:file:~/IdeaProjects/TimesheetProject/src/main/resources/h2userDB;AUTO_SERVER=TRUE
+spring.datasource.url=jdbc:mysql://localhost:3306/timesheet?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.username=student
+spring.datasource.password=student
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
